fix finish current planner
